--- a/lib/locales/en.yml
+++ b/lib/locales/en.yml
@@ -39,7 +39,7 @@ en:
   3. exit "
   guess: "Opps, secret code must to be from four digits in range from 1 to 6"
   lost_game_message: "Oh, your attempts ended... Your code was: %{code}"
-  command_int_error: "Each integer must be in range from 1 to 6."
+  command_int_error: "Each integer must be in range from 1 to 6 and command length must be 4"
   win_game_message: "Yayy, u won the game! Congrats!"
   save_results_message: "Do you want to save result? 1. yes 2. no"
   success_save_message: "Your result was saved"
@@ -47,4 +47,3 @@ en:
   digit_on_place: "Hint number: %{code}"
   registration_name_emptyness_error: "Name must be not empty"
   registration_name_length_error: "It must be more than 3 and less than 20 symbols."
-  command_length_error: "Command must from four integers"
